erDiagram
    CASES {
        uuid_v7 id PK
        string case_reference UK "CASE-YYYYMMDD-XXXXX"
        uuid_v7 assigned_to FK "Current CO"
        uuid_v7 assigned_by FK "Bank Admin"
        string status "OPEN / IN_PROGRESS / ESCALATED / CLOSED_STR / CLOSED_NO_ACTION"
        string priority "CRITICAL / HIGH / MEDIUM / LOW"
        int aggregated_risk_score "Sum of linked alert risk scores"
        timestamp opened_at
        timestamp last_activity_at
        timestamp closed_at
        uuid_v7 closed_by FK
        string closure_disposition "STR_FILED / FALSE_POSITIVE / INCONCLUSIVE"
        text false_positive_rationale "Mandatory if FP"
        boolean has_investigation_note "STR filing gate"
        boolean sys_is_deleted
        timestamp sys_deleted_at
        uuid_v7 sys_deleted_by FK
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    CASE_ALERT_LINKS {
        uuid_v7 id PK
        uuid_v7 case_id FK
        uuid_v7 alert_id FK
        uuid_v7 linked_by FK
        boolean is_primary_alert
        timestamp sys_created_at "Immutable"
    }
    CASE_NOTES {
        uuid_v7 id PK
        uuid_v7 case_id FK
        uuid_v7 authored_by FK
        string note_type "OBSERVATION / EVIDENCE / RATIONALE"
        text note_content
        string cloudinary_public_id
        string cloudinary_secure_url
        timestamp sys_created_at "Immutable"
    }
    CASE_ASSIGNMENTS {
        uuid_v7 id PK
        uuid_v7 case_id FK
        uuid_v7 assigned_from FK "Previous CO - NULLABLE for first assignment"
        uuid_v7 assigned_to FK "New CO"
        uuid_v7 assigned_by FK "Bank Admin"
        string assignment_reason
        timestamp sys_created_at "Immutable"
    }
    CASE_ESCALATIONS {
        uuid_v7 id PK
        uuid_v7 case_id FK
        uuid_v7 escalated_by FK
        uuid_v7 escalated_to FK
        text escalation_reason
        string escalation_status "PENDING / ACKNOWLEDGED / RESOLVED"
        timestamp acknowledged_at
        timestamp resolved_at
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    STR_FILINGS {
        uuid_v7 id PK
        uuid_v7 case_id FK
        string filing_reference UK "STR-YYYYMMDD-XXXXX"
        string regulatory_body "FinCEN / FIU_IND"
        string typology_category "STRUCTURING / LAYERING / PEP / FRAUD_ML / GEO_RISK"
        string subject_name
        string subject_account_no
        text suspicion_narrative
        string pdf_cloudinary_url
        string xml_cloudinary_url
        uuid_v7 filed_by FK
        timestamp sys_created_at "Immutable"
    }
    STR_FILING_TRANSACTIONS {
        uuid_v7 id PK
        uuid_v7 str_filing_id FK
        uuid_v7 transaction_id FK
        timestamp sys_created_at "Immutable"
    }
    CASE_AUDIT_TRAIL {
        uuid_v7 id PK
        uuid_v7 case_id FK
        uuid_v7 actor_id FK
        string event_type "CREATED / ASSIGNED / REASSIGNED / NOTE_ADDED / ESCALATED / STR_FILED / CLOSED"
        jsonb event_metadata
        string ip_address
        timestamp sys_created_at "Immutable"
    }
    IN_PLATFORM_NOTIFICATIONS {
        uuid_v7 id PK
        uuid_v7 recipient_id FK
        string notification_type "CASE_ASSIGNED / STR_FILED / ESCALATION / BATCH_DONE"
        string title
        text body
        boolean is_read
        timestamp read_at
        boolean sys_is_deleted
        timestamp sys_deleted_at
        timestamp sys_created_at
        timestamp sys_updated_at
    }
    CASES ||--o{ CASE_ALERT_LINKS : "bundles"
    CASES ||--o{ CASE_NOTES : "documented via"
    CASES ||--o{ CASE_ASSIGNMENTS : "assignment history"
    CASES ||--o{ CASE_ESCALATIONS : "escalated through"
    CASES ||--o| STR_FILINGS : "results in"
    STR_FILINGS ||--o{ STR_FILING_TRANSACTIONS : "covers transactions"
    CASES ||--o{ CASE_AUDIT_TRAIL : "tracked in"